# streamc

./: .gitignore  CMakeLists.txt  a.out  comp
assets/: keymap
include/: keymap.hpp  rosetta_utf8.h  special_escape_codes.h  special_keycodes.h
lib/: libxkbswitch.so.1.8.5
src/: keymap.cpp  main.c  main.cpp  rosetta_utf8.c  special_keycodes.cpp
